2006-11-23  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/vte.c: Fixed segfault when opening the preferences dialog for
              the first time from the VTE widget.


2006-11-23  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/highlighting.c, src/geany.h, doc/geany.docbook,
   data/filetypes.*:
   Only use [a-zA-Z0-9] chars for default wordchars, to avoid problems
   with word matching when using Find & Replace functions.
 * src/keybindings.c:
   Add switching to a notebook tab number using Alt-1 to Alt-9; Alt-0
   switches to the last tab.
 * src/geany.h, data/filetypes.*:
   Add underscore to default wordchars again (oops).


2006-11-22  Frank Lanitz  <frank@frank.uvena.de>

 * po/hu.po, src/about.c, THANKS, configure.in:
   Added Hungarian translation (Thanks to Gabor Kmetyko aka
   kilo <kg_kilo@freemail.hu>).


2006-11-22  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/notebook.c, src/notebook.h, src/document.c:
   Ensure tab DnD is enabled when tabs are added; use
   notebook_remove_page() instead of gtk_notebook_remove_page().
   Unified notebook_[en|dis]able_dnd_for_dropping_files() in
   tab_count_changed().


2006-11-21  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/callbacks.c, src/callbacks.h, src/document.c, src/main.c,
   src/notebook.c, src/notebook.h:
   Removed DnD handler for the main window (not very useful).
   Fixed broken tab reordering by only enabling DnD for dropping files
   when there are no open file tabs, otherwise disable it and enable
   DnD for moving file tabs. Dropping files into Geany when file tabs
   are open still works because then it is handled by the Scintilla
   widget.
 * src/msgwin.c: Applied patch from Bob Doan to parse PHP compile
                 errors better (thanks).


2006-11-18  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/sciwrappers.c, src/sciwrappers.h:
   Added sci_get_first_visible_line().
 * src/interface.c, src/geany.h, src/sci_cb.h, src/keyfile.c,