@@ -994,16 +994,14 @@ void ui_show_linenumber_margin()
 }
 
 
-/* Creates a GNOME HIG style frame (with no border and indented child alignment)
- * and packs it into the parent container.
- * Returns: the alignment container for the frame */
-GtkContainer *ui_frame_new(GtkContainer *parent, const gchar *label_text)
+/* Creates a GNOME HIG style frame (with no border and indented child alignment).
+ * Returns the frame widget, setting the alignment container for packing child widgets */
+GtkWidget *ui_frame_new_with_alignment(const gchar *label_text, GtkWidget **alignment)
 {
 	GtkWidget *label, *align;
 	GtkWidget *frame = gtk_frame_new (NULL);
 	gchar *label_markup;
 
-	gtk_container_add(GTK_CONTAINER(parent), frame);
 	gtk_frame_set_shadow_type (GTK_FRAME (frame), GTK_SHADOW_NONE);
 
 	align = gtk_alignment_new (0.5, 0.5, 1, 1);
@@ -1016,7 +1014,8 @@ GtkContainer *ui_frame_new(GtkContainer *parent, const gchar *label_text)
 	gtk_label_set_use_markup (GTK_LABEL (label), TRUE);
 	g_free(label_markup);
 
-	return GTK_CONTAINER(align);
+	*alignment = align;
+	return frame;
 }
 
 
