@@ -93,7 +93,7 @@ void ui_show_markers_margin();
 void ui_show_linenumber_margin();
 
 
-GtkContainer *ui_frame_new(GtkContainer *parent, const gchar *label_text);
+GtkWidget *ui_frame_new_with_alignment(const gchar *label_text, GtkWidget **alignment);
 
 GtkWidget *ui_dialog_vbox_new(GtkDialog *dialog);
 
